# cubix_data_engineer_capstone

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
cubix_data_engineer_capstone/: test.py
cubix_data_engineer_capstone/etl/bronze/: extract_and_load_file.py
cubix_data_engineer_capstone/etl/gold/: daily_product_category_metrics.py  daily_sales_metrics.py  wide_sales.py
cubix_data_engineer_capstone/etl/silver/: calendar.py  customers.py  product_category.py  product_subcategory.py  products.py  sales.py  scd.py
cubix_data_engineer_capstone/utils/: databricks.py
results/wide_sales.parquet/wide_sales.parquet/: _committed_7179396503974416499  part-00000-tid-7179396503974416499-9fbcf98d-225a-4b52-abe6-7fa286a5fa10-543-1.c000.snappy.parquet
src/: test.py
tests/etl/gold/: test_daily_product_category_metrics.py  test_daily_sales_metrics.py  test_wide_sales.py
tests/etl/silver/: test_calendar.py  test_customers.py  test_product_category.py  test_product_subcategory.py  test_sales.py
