[project]
name = "cubix-data-engineer-capstone"
version = "0.3.0"
description = ""
authors = [
    {name = "Robert Szondi", email ="robert.szondi@allianz.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyspark (>=3.5.4)",
    "numpy (>=1)"
]

[project.optional-dependencies]
delta = ["delta-spark>=3.3.0"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pyarrow ="^19.0.0"
pre-commit = "^4.0.1"
pandas = "^2.2.3"

[tool.pytest.ini-options]
testpaths = ["./tests"]
filterwarnings = ["ignore:DeprecationWarning"]
addopts = "--disable-warnings -p no:warnings"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

 
[tool.poetry]
packages = [
 { include = "cubix_data_engineer_capstone" }
]
